@@ -108,7 +108,6 @@ if [ "$EXTRA_CFLAGS_RELEASE" = "" ]; then
 	export EXTRA_CFLAGS_RELEASE="-ggdb -fno-omit-frame-pointer"
 fi
 
-LIBFABRIC_MIN_VERSION=1.4.2
 NDCTL_MIN_VERSION=60.1
 
 function convert_changelog() {
